--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -4,16 +4,46 @@
     width: 100%;
     left: 0;
     background-color: #c0c0c0;
+    display: flex;
+    flex-direction: row;
 }
+
 
 .nav-header {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    display: flex;
     list-style-type: none;
     margin: 0;
     padding: 0;
+}
+
+/*** barre de navigation ***/
+
+.navigations {
+    display: flex;
+    align-items: center;
+}
+
+.liens-navigation-home {
+    display: flex;
+    align-items: center;
+    color: #010101;
+    font-family: 'windowsregular';
+    font-size: 16px;
+    width: 85px;
+    margin-left: 5px;
+    
+}
+
+.liens-navigation {
+    display: flex;
+    align-items: center;
+    color: #010101;
+    font-family: 'windowsregular';
+    font-size: 12px;
+    width: 110px;
+    margin-left: 5px;
 }
 
 .icon {
@@ -24,12 +54,8 @@
     width: 180px;
 }
 
-.liens-navigation {
-    color: #010101;
-    font-family: 'windowsregular';
-    font-size: 22px;
-    width: 110px;
-}
+
+/** Menu deroulant **/
 
 .menu {
     display: none;
@@ -40,66 +66,91 @@
 }
 
 
-#start-menu {
-    position:absolute;
-    bottom: 2.55rem;
-    width: 230px;
-    left: 0;
-    height: 200px;
-    background: #c0c0c0;
-    z-index: 1;
-    box-shadow: inset 1px 1px #fefefe, 2px 2px #010101;
-}
-
-.grid-nav {
-    display: grid;
-    grid-template-columns: 50px 1fr;
-    grid-template-rows: repeat(2, 1fr);
-    height: 100%;
-    width: 100%;
-}
-
-.background-95 {
-    grid-row: 1/3;
-    width: 70%;
-    height: 100%;
-    margin-left: 10px;
-    background-color: #808080;
-
-}
-
-.back-95{
-    margin-top: 125px;
-}
-
-.my-name{
-    font-size: 25px;
-    height: 100%;
-    width: 100%;
-    text-align: center; 
-    transform: rotate(-90deg); 
-    white-space: nowrap; 
-    color: #fefefe;
-}
-
-.liens {
-    grid-row: 1/3;
+  .menu-bar {
+    z-index: 9999;
+    position: absolute;
+    bottom: 43px;
+    left: 0px;
+    width: 165px;
+    height: 180px;
+    background: #000;
+    background: #c3c3c3;
+    overflow: hidden;
+    border-top: 2px solid #fafafa;
+    border-left: 2px solid #fafafa;
+    border-right: 1.5px solid #5a5a5a;
+    border-bottom: 1.5px solid #5a5a5a;
+    box-shadow: 1.5px 1.5px #000;
+    /* max-height: 100%;
+    max-width: 100%; */
+    align-items: flex-end;
+    outline: 1px solid #dedede;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    
-
+    flex-direction: row;
+    align-items: flex-start;
+    font-size: 12px;
 }
-.liens-home {
-    outline: none;
+
+.sidebar {
+    width: 25px;
+    background: #7b7d7b;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+}
+
+.sidebar-image {
+    width: 100%;  
+}
+
+.sidebar-image .img {
+    border-style: none;
+    overflow-clip-margin: content-box;
+    overflow: clip;
+}
+
+.socials {
+    flex-grow: 1;
+}
+
+.a {
+    color: #000;
     text-decoration: none;
-    padding: 2px 1px 0;
-    font-size: 20px;
 }
 
-  
-#start-menu .liens-home {
-    padding: 10px;
-    margin-left: 10px; 
+.bar {
+    display: flex;
+    flex-direction: row;
+    padding: 5px 10px 5px 10px;
+    align-items: center;
+}
+
+.bar:hover {
+    background-color: #000080;
+}
+
+.social-image {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+    border-radius: 6px;
+}
+
+.social-text {
+    font-size: 15px;
+}
+
+.u {
+    text-decoration: underline;
+}
+
+.a:hover {
+   background-color: #000080;
+}
+
+.hr {
+    width: 100%;
+    height: 1px;
+    background: #000;
+    border-bottom: 1px solid #fefefe;
 }
