ajout du contenu competences et modification de la taille et de l'ordre des icons bureau

--- a/src/assets/css/Design.css
+++ b/src/assets/css/Design.css
@@ -1,9 +1,14 @@
 .p_design {
     position: absolute;
-    font-size: 16px;
-    top: 85px;
+    font-size: 14px;
+    top: 65px;
+    color: #fefefe;
 }
 
 .design-image {
-    width: 60px;
+    width: 40px;
+}
+
+.modal-content {
+    margin: 10px;
 }
