--- a/src/assets/css/Windows.css
+++ b/src/assets/css/Windows.css
@@ -18,40 +18,68 @@ Gris (couleur des bordures et des séparateurs) : #C0C0C0
 
 
 /* Header pop-up*/
-
-
-.popup_header {
-    background-color:  #000080;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 40px;
-    width: auto;
+.modal_game {
+    border: 3px solid #C0C0C0;
 }
-
-.intitu_popup_header, .close_popup_header {
+.close-button {
+    background: #c3c3c3;
+    border-top: 1px solid #fafafa;
+    border-left: 1px solid #fafafa;
+    border-right: 1px solid #5a5a5a;
+    border-bottom: 1px solid #5a5a5a;
+    box-shadow: 1px 1px #000;
+    height: 16px;
+    width: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 20px;
+    font-weight: 700;
+    margin-right: 3px;
+}
+.modal-header{
+    display: flex;
+    width: auto;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    z-index: 10;
+    margin: 2px;
+    padding: 2px 2px 2px 2px
 }
 
-.title_popup_header {
-    color: #FEFEFE;
+.windows-name {
+    color: #fff;
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    padding: 0;
+    font-size: 16px;
+    margin: 0 0 0 3px;
 }
+
+.icon-modal-windows {
+    width: 15%;
+    margin-right: 10px;
+}
+/* .intitu_popup_header, .close_popup_header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
 
 .image_popup_header {
-    width: 20%;
-    margin-right: 5px;
+    width: 75%;
 }
 
-.button_popup_header {
+/* .button_popup_header {
     background-color: #C0C0C0;
     width: 30px;
     height: 30px;
     box-shadow: inset 1px 1px #fefefe, 1px 1px #010101;
     margin-right: 5px;
-}
+} */
 
 .icon_button_popup_header {
     width: 75%;
