--- a/src/assets/css/Developpement.css
+++ b/src/assets/css/Developpement.css
@@ -1,9 +1,10 @@
 .p_developpement {
     position: absolute;
-    font-size: 16px;
-    top: 85px;
+    font-size: 14px;
+    top: 65px;
+    color: #fefefe;
 }
 
 .developpement-image {
-    width: 60px;
+    width: 40px;
 }
