--- a/src/assets/css/Game.css
+++ b/src/assets/css/Game.css
@@ -1,17 +1,6 @@
-.modal_game {
-    position: fixed;
-    top: 12%;
-    left: 12%;
-    transform: "translate(-50%, -50%)";
-    z-index: 1;
-    background-color: white;
-    width: 75%;
-    height: 500px;
-    background-color: #c0c0c0;
-    box-shadow: inset 1px 1px #fefefe, 1px 1px #010101;
-}
+
 .modal-header {
-    background-color: blue;
+    background-color: #00007c;
 }
 .game-image {
     width: 40px;
