--- a/src/assets/css/Developpement.css
+++ b/src/assets/css/Developpement.css
@@ -8,3 +8,9 @@
 .developpement-image {
     width: 40px;
 }
+
+.card-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
