--- a/src/assets/css/Windows.css
+++ b/src/assets/css/Windows.css
@@ -4,11 +4,13 @@ Bleu clair (couleur de fond des fenêtres) : #EBF4FB
 Blanc (couleur des titres de fenêtre et des boutons) : #FEFEFE
 Gris (couleur des bordures et des séparateurs) : #C0C0C0
 **/
-.main{
+
+.main {
     height: 100vh;
     width: auto;
     background-color: #008080;
 }
+
 .app-container {
     background-color: #008080;
     height: 100vh;
@@ -25,7 +27,7 @@ Gris (couleur des bordures et des séparateurs) : #C0C0C0
     transform: "translate(-50%, -50%)";
     z-index: 1;
     background-color: white;
-    width: 65%;
+    width: 55%;
     height: 700px;
     background-color: #c0c0c0;
     box-shadow: inset 1px 1px #fefefe, 1px 1px #010101;
@@ -81,13 +83,6 @@ Gris (couleur des bordures et des séparateurs) : #C0C0C0
     width: 75%;
 }
 
-/* .button_popup_header {
-    background-color: #C0C0C0;
-    width: 30px;
-    height: 30px;
-    box-shadow: inset 1px 1px #fefefe, 1px 1px #010101;
-    margin-right: 5px;
-} */
 
 .icon_button_popup_header {
     width: 75%;
@@ -95,7 +90,7 @@ Gris (couleur des bordures et des séparateurs) : #C0C0C0
 }
 
 .modal-content {
-    height: calc(100% - 30px); 
+    height: calc(100% - 35px); 
     overflow-y: scroll;
   }
 
@@ -124,4 +119,121 @@ Gris (couleur des bordures et des séparateurs) : #C0C0C0
 
 .popup-content {
     margin: 30px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.loader {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  background-image: url('/public/windows-95-cloud-background.png');
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(12, 1fr);
+}
+
+.container-picture-windows{
+  grid-column: 5 / 10;
+  grid-row: 3 / 7;
+  width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.picture-windows {
+  min-width: 100%;
+  height: auto;
+}
+
+.microsoft {
+  grid-column: 4 / 7;
+  grid-row: 6 / 8;
+  height: auto;
+  font-size: 28px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  letter-spacing: 2px;
+  padding-left: 30px;
+  font-weight: bold;
+  color: white;
+}
+
+.title-windows {
+  grid-column: 5 / 9;
+  grid-row:  8 / 10;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+
+.name-title {
+  font-size: bold;
+}
+
+.barLoad { 
+  grid-column: 1 / 13;
+  grid-row:  13 / 13; 
+  margin:0 auto;
+  width: 100%;
+  border: 1px solid white;
+  background-color: white;
+  height: 20px;
+  padding:1px;
+  position:relative;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.barLoad:before {
+  content:''; 
+  top:-4px; 
+  right:-4px; 
+  bottom:-4px; 
+  left:-4px;
+}
+
+.barLoad .loadBar { 
+  position:absolute;
+  border-radius:10px;
+  top:0;
+  right:100%;
+  bottom:0;
+  left:0;
+  background:linear-gradient(-105deg, #009acc, #363795);; 
+  width:0;
+  animation:borealisBar 2s linear infinite;
+}
+
+@keyframes borealisBar {
+  0% {
+    left:0%;
+    right:100%;
+    width:0%;
+  }
+  10% {
+    left:0%;
+    right:75%;
+    width:25%;
+  }
+  90% {
+    right:0%;
+    left:75%;
+    width:25%;
+  }
+  100% {
+    left:100%;
+    right:0%;
+    width:0%;
+  }
 }
