--- a/src/assets/css/Background.css
+++ b/src/assets/css/Background.css
@@ -5,7 +5,31 @@
     justify-content: space-around;
 }
 
+.h2-current-color, .h2-choose-color {
+    text-align: center;
+    margin: 30px 0px;
+}
+
+.container-current-color {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
 .color {
     height: 100px;
-    width: 100px;
+    width: 150px;
+    align-self: center;
+}
+
+.color-background {
+    color: white;
+}
+
+.color-selector {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 }
