--- a/src/assets/css/Windows.css
+++ b/src/assets/css/Windows.css
@@ -4,7 +4,7 @@ Bleu clair (couleur de fond des fenêtres) : #EBF4FB
 Blanc (couleur des titres de fenêtre et des boutons) : #FEFEFE
 Gris (couleur des bordures et des séparateurs) : #C0C0C0
 **/
-
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;900&display=swap');
 .main {
     height: 100vh;
     width: auto;
@@ -74,8 +74,8 @@ Gris (couleur des bordures et des séparateurs) : #C0C0C0
 }
 
 .icon-modal-windows {
-    width: 15%;
-    margin-right: 10px;
+  width: 20px;
+  margin-right: 10px;
 }
 
 
@@ -92,6 +92,7 @@ Gris (couleur des bordures et des séparateurs) : #C0C0C0
 .modal-content {
     height: calc(100% - 35px); 
     overflow-y: scroll;
+    overflow-x: hidden;
   }
 
 /* icon design */
@@ -157,7 +158,7 @@ body {
   grid-column: 4 / 7;
   grid-row: 6 / 8;
   height: auto;
-  font-size: 28px;
+  font-size: 30px;
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -165,20 +166,25 @@ body {
   padding-left: 30px;
   font-weight: bold;
   color: white;
+  font-family: 'Noto Sans', sans-serif;
+  font-weight: 900;
 }
 
 .title-windows {
-  grid-column: 5 / 9;
+  grid-column: 5 / 11;
   grid-row:  8 / 10;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  font-size: 20px;
+  font-size: 35px;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 .name-title {
-  font-size: bold;
+  font-family: 'Noto Sans', sans-serif;
+  display: flex;
+  justify-content: center;
 }
 
 .barLoad { 
@@ -193,6 +199,10 @@ body {
   position:relative;
   display: flex;
   justify-content: flex-end;
+}
+
+.version-loading {
+  color: white;
 }
 
 .barLoad:before {
