--- a/src/assets/css/Background.css
+++ b/src/assets/css/Background.css
@@ -1,3 +1,14 @@
+.modal_background {
+    position: fixed;
+    z-index: 1;
+    background-color: white;
+    width: 450px;
+    height: 700px;
+    background-color: #c0c0c0;
+    box-shadow: inset 1px 1px #fefefe, 1px 1px #010101;
+    border: 3px solid #C0C0C0;
+}
+
 .color-selector {
     width: 100%;
     height: 50%;
@@ -37,4 +48,5 @@
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    grid-gap: 10px;
 }
